[gd_scene load_steps=2 format=3 uid="uid://cu4qfg7h0n5an"]

[ext_resource type="Script" uid="uid://dr3tyy1hgo011" path="res://scripts/reset_button.gd" id="1_m0ji7"]

[node name="Button" type="Button"]
offset_right = 120.0
offset_bottom = 80.0
text = "Reset"
script = ExtResource("1_m0ji7")

[connection signal="mouse_entered" from="." to="." method="_on_reset_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_reset_button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_reset_button_pressed"]
